--- a/assets/main.css
+++ b/assets/main.css
@@ -620,10 +620,18 @@ table td {
 
 .site-header .site-title img.logo {
   width: 80px;
-  padding: 10px 20px;
+  padding: 8px 10px 0px 0px;
 }
 .site-header .site-title span.logo {
   font-weight: bold;
+}
+.site-header .site-title .logo_subtitle {
+  font-size: 100%;
+}
+@media (max-width: 768px) {
+  .site-header .site-title .logo_subtitle {
+    font-size: 70%;
+  }
 }
 
 .post-header .post-banner {
@@ -633,6 +641,9 @@ table td {
 
 .site-footer .footer-heading img.logo {
   width: 30px;
+}
+.site-footer span.logo {
+  font-weight: bold;
 }
 
 .site-nav {
